--- a/.prettierrc
+++ b/.prettierrc
@@ -4,8 +4,7 @@
   "trailingComma": "all",
   "singleQuote": false,
   "semi": true,
-  "importOrder":
-    ["^@components/(.*)$", "^@constants/(.*)$", "^@ui/(.*)$", "^[./]"],
+  "importOrder": ["^@components/(.*)$", "^@constants/(.*)$", "^@ui/(.*)$", "^[./]"],
   "importOrderSeparation": true,
   "importOrderSortSpecifiers": true,
   "plugins": ["@trivago/prettier-plugin-sort-imports"]
